# chariot-fw

./: .gitignore  Cargo.toml  README.md  dump_flash  load_fw.sh  memory.x  test.txt
.cargo/: config.toml
bmi323-rs/: Cargo.toml  README.md
bmi323-rs/src/: async.rs  config.rs  lib.rs  registers.rs  sync.rs
bmp390-rs/: Cargo.toml  README.md
bmp390-rs/src/: async.rs  config.rs  conversion.rs  interface.rs  lib.rs  registers.rs  sync.rs
do-nothing/: Cargo.toml
do-nothing/src/: main.rs
erase-flash/: Cargo.toml
erase-flash/src/: main.rs
fw-main/: Cargo.toml  rp2350b_pin_assign.xlsx
fw-main/src/: buffered_flash.rs  main.rs  measurement.rs  sensor_tasks.rs
mmc5983ma/: Cargo.toml  README.md
mmc5983ma/src/: async.rs  config.rs  lib.rs  registers.rs  sync.rs
python-client/: app_tcp.py  tcp_thread.py
python-plotter/: plotter.py
